--- a/lifeManager/app/src/main/res/layout/fragment_schedule_list.xml
+++ b/lifeManager/app/src/main/res/layout/fragment_schedule_list.xml
@@ -25,7 +25,7 @@
                 android:layout_alignParentTop="true"
                 android:text="@string/categoryText"
                 android:textAppearance="@style/TextAppearance.AppCompat.Large"
-                android:textSize="20sp" />
+                android:textSize="25sp" />
 
             <TextView
                 android:id="@+id/itemDescription"
@@ -34,6 +34,7 @@
                 android:layout_below="@+id/itemCategory"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentLeft="true"
+                android:textSize="18sp"
                 android:text="@string/descriptionText" />
 
             <TextView
@@ -43,20 +44,8 @@
                 android:layout_below="@+id/itemDescription"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentLeft="true"
+                android:textSize="20sp"
                 android:text="@string/timeText" />
-
-            <!--<TextView-->
-                <!--android:id="@+id/textViewOptions"-->
-                <!--android:layout_width="wrap_content"-->
-                <!--android:layout_height="wrap_content"-->
-                <!--android:layout_alignParentRight="true"-->
-                <!--android:layout_alignParentEnd="true"-->
-                <!--android:layout_alignParentTop="true"-->
-                <!--android:layout_marginVertical="8dp"-->
-                <!--android:text="   &#8942;   "-->
-                <!--android:onClick="openOptions"-->
-                <!--android:textSize="30sp"-->
-                <!--android:textAppearance="?android:textAppearanceLarge" />-->
 
         </RelativeLayout>
 
